--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
             <!-- Table Header -->
             <div class="table-header">
               <div class="col-provider">Provider</div>
+              <div class="col-model">Model</div>
               <div class="col-wer">WER</div>
               <div class="col-latency">Latency (ms)</div>
               <div class="col-status">Status</div>
