--- a/login.html
+++ b/login.html
@@ -3,19 +3,45 @@
 <head>
   <meta charset="UTF-8" />
   <title>Login | Farm Vaidya</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="login.css" />
 </head>
+
 <body>
+  <div class="login-page">
 
-  <div class="login-container">
-    <img src="assets/logo.png" alt="Farm Vaidya" />
+    <!-- LEFT SIDE (LOGO) -->
+    <div class="login-left">
+      <div class="logo-wrapper">
+        <img src="assets/logo.png" alt="Farm Vaidya Logo" />
+        <p>sustainability with voice agent</p>
+      </div>
+    </div>
 
-    <form id="loginForm">
-      <input id="username" placeholder="Username" required />
-      <input id="password" type="password" placeholder="Password" required />
-      <p id="errorMsg" class="hidden error"></p>
-      <button type="submit">LOGIN</button>
-    </form>
+    <!-- RIGHT SIDE (LOGIN FORM) -->
+    <div class="login-right">
+      <div class="login-box">
+        <h2>STT Providers Comparison</h2>
+        <h4>LOGIN</h4>
+
+        <form id="loginForm">
+          <div class="input-group">
+            <span class="icon">👤</span>
+            <input id="username" type="text" placeholder="Username" required />
+          </div>
+
+          <div class="input-group">
+            <span class="icon">🔒</span>
+            <input id="password" type="password" placeholder="Password" required />
+          </div>
+
+          <p id="errorMsg" class="error hidden">Incorrect username or password</p>
+
+          <button type="submit">LOGIN</button>
+        </form>
+      </div>
+    </div>
+
   </div>
 
   <script src="login.js"></script>
