--- a/login.html
+++ b/login.html
@@ -13,8 +13,9 @@
     <!-- LEFT SIDE (LOGO) -->
     <div class="login-left">
       <div class="logo-wrapper">
-        <img src="assets/logo.png" alt="Farm Vaidya Logo" />
-        <p>sustainability with voice agent</p>
+        <div class="logo-card">
+          <img src="assets/logo.png" alt="Farm Vaidya Logo" />
+        </div>  
       </div>
     </div>
 
