Update login form fields and attributes

--- a/login.html
+++ b/login.html
@@ -6,10 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="login.css" />
 </head>
-
 <body>
   <div class="login-page">
-
     <!-- LEFT SIDE (LOGO) -->
     <div class="login-left">
       <div class="logo-wrapper">
@@ -18,45 +16,46 @@
         </div>
       </div>
     </div>
-
     <!-- RIGHT SIDE (LOGIN FORM) -->
     <div class="login-right">
       <div class="login-box">
         <h2>STT Providers Comparison</h2>
         <h4>LOGIN</h4>
-
         <form id="loginForm" autocomplete="off">
           <div class="input-group">
             <span class="icon">👤</span>
             <input
               id="username"
-              type="email"
-              placeholder="admin@farmvaidya.ai"
+              type="text"
+              name="user_email_2026"
+              placeholder="Username"
+              autocomplete="new-user"
+              readonly
+              onfocus="this.removeAttribute('readonly');"
               required
             />
           </div>
-
           <div class="input-group">
             <span class="icon">🔒</span>
             <input
               id="password"
               type="password"
+              name="user_pass_2026"
               placeholder="Password"
+              autocomplete="new-password"
+              readonly
+              onfocus="this.removeAttribute('readonly');"
               required
             />
           </div>
-
           <p id="errorMsg" class="error hidden">
             Incorrect username or password
           </p>
-
           <button type="submit">LOGIN</button>
         </form>
       </div>
     </div>
-
   </div>
-
   <script src="login.js"></script>
 </body>
 </html>
