Update stylesheet and script references in login_new.html

--- a/login_new.html
+++ b/login_new.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Login | Farm Vaidya</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="login.css" />
+  <link rel="stylesheet" href="login_new.css" />
 </head>
 
 <body>
@@ -75,6 +75,6 @@
 
   </div>
 
-  <script src="login.js"></script>
+  <script src="login_new.js"></script>
 </body>
 </html>
