--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>STT Providers Comparison | Farm Vaidya</title>
+  <title>STT Providers Benchmarking | Farm Vaidya</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -19,7 +19,7 @@
   <div class="main-wrapper">
     <!-- Page Title -->
     <div class="page-title">
-      <h1>STT Providers Comparison</h1>
+      <h1>STT Providers Benchmarking</h1>
       <p class="subtitle">Benchmark Speech-to-Text providers using WER & Latency</p>
     </div>
 
