--- a/login_new.html
+++ b/login_new.html
@@ -22,7 +22,7 @@
     <!-- RIGHT SIDE (LOGIN FORM) -->
     <div class="login-right">
       <div class="login-box">
-        <h2>STT Providers Benchmarkin</h2>
+        <h2>STT Providers Benchmarking</h2>
         <h4>LOGIN</h4>
 
         <!-- IMPORTANT: autocomplete OFF -->
