--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
             <div class="table-header">
               <div class="col-provider">Provider</div>
               <div class="col-model">Model</div>
-              <div class="col-wer">WER</div>
-              <div class="col-latency">Latency (ms)</div>
+              <div class="col-wer sortable" data-sort="wer">WER ⬍</div>
+              <div class="col-latency sortable" data-sort="latency_ms">Latency (ms) ⬍</div>
               <div class="col-status">Status</div>
               <div class="col-transcript">Transcript</div>
             </div>
