--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -121,8 +120,12 @@
             <div class="table-header">
               <div class="col-provider">Provider</div>
               <div class="col-model">Model</div>
-              <div class="col-wer sortable" data-sort="wer">WER ⬍</div>
-              <div class="col-latency sortable" data-sort="latency_ms">Latency (ms) ⬍</div>
+              <div class="col-wer sortable" data-sort="wer">
+                <span class="sort-label">WER <span class="sort-arrow">⬍</span></span>
+              </div>
+              <div class="col-latency sortable" data-sort="latency_ms">
+                <span class="sort-label">Latency (ms) <span class="sort-arrow">⬍</span></span>
+              </div>
               <div class="col-status">Status</div>
               <div class="col-transcript">Transcript</div>
             </div>
