--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
               <!-- 🔥 TRANSCRIPT + DOWNLOAD BUTTON -->
               <div class="col-transcript transcript-header">
                 Transcript
-                <button id="downloadJsonBtn" class="download-btn hidden">
-                  ⬇
+                <button id="downloadJsonBtn" class="hidden">
+                  Download
                 </button>
               </div>
             </div>
