--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <body>
   <!-- HEADER -->
   <header>
-    <div class="header-content">
+    <div class="header-content header-flex">
       <img src="assets/logo.png" alt="Farm Vaidya Logo" />
+      <button id="logoutBtn" class="logout-btn">Logout</button>
     </div>
   </header>
 
