--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="form-group">
               <label class="form-label">Language Code</label>
               <select id="language_code">
-                <option value="">Auto-detect (All except Google)</option>
+                <option value="">Auto-detect (All except Google & AI4Bharat)</option>
                 <option value="as-IN">Assamese</option>
                 <option value="bn-IN">Bengali</option>
                 <option value="en-IN">English - India</option>
@@ -95,7 +95,7 @@
                 <line x1="12" y1="16" x2="12" y2="12" stroke-width="2"/>
                 <circle cx="12" cy="8" r="0.5" fill="currentColor"/>
               </svg>
-              <p><strong>Note:</strong> Google STT requires language selection</p>
+              <p><strong>Note:</strong> Google STT and AI4Bharat require language selection</p>
             </div>
 
             <!-- Submit -->
